dashboard et widget agenda simpliste

--- a/src/app/components/i18n/agenda/en.json
+++ b/src/app/components/i18n/agenda/en.json
@@ -1,6 +1,7 @@
 {
     "mainAgenda": {
         "title": "Planning",
+        "next_event" : "Next events",
         "buttons" : {
             "addEvent": "Add event",
             "updateEvent": "Update event",
