--- a/src/app/components/i18n/stats/fr.json
+++ b/src/app/components/i18n/stats/fr.json
@@ -1,140 +1,148 @@
 {
-  "stats": {
-    "buttons" : {
-      "timeline" : "Détail"
-    },
-    "positionType": {
-      "libelle": "Poste",
-      "value": {
-        "midfielder": "Milieu",
-        "defender": "Défenseur",
-        "forward": "Attaquant",
-        "goalkeeper": "Gardien",
-        "pivot": "Pivot",
-        "center-backcourt": "Demi-centre",
-        "right-backcourt": "Arrière Droit",
-        "left-backcourt": "Arrière Gauche",
-        "right-wingman": "Ailier Droit",
-        "left-wingman": "Ailier Gauche"
-      }
-    },
-    "efficiency": {
-      "efficiency": "Efficacité au tir",
-      "efficiencyTotal": "Globale",
-      "efficiency9m": "9 mètres",
-      "efficiency6m": "6 mètres",
-      "efficiency7m": "7 mètres"
-    },
-    "actionTab": {
-      "title": "Faits de jeu",
-      "actions": "Actions",
-      "positive": "positives",
-      "negative": "négatives",
-      "attack": "Actions offensives",
-      "defense": "Actions défensives"
-    },
-    "resumeTab": {
-      "shoot": "Tirs",
-      "goal": "Buts",
-      "goalScored": "Buts marqués",
-      "goalConceded": "Buts encaissés",
-      "goalLabel": "Nombre de Buts",
-      "goalAvgFull": "Moyenne/match",
-      "goalAvgLight": "Moyenne",
-      "frequence": "Fréquence",
-      "frequence2": "1 but toutes les",
-      "minute": "minutes",
-      "usePlayer": "Utilisation",
-      "gamePlayed": "Matchs joués",
-      "holder": "Titularisations",
-      "playTime": "Temps de jeu moyen",
-      "sanctions": "Sanctions",
-      "noData": "Aucune donnée collectée"
-    },
-    "labelTab": {
-      "shoot": "Tir",
-      "actions": "Actions de jeu",
-      "resume": "Résumé"
-    },
-    "typoGoal": "Typologie des buts",
-    "sanction": {
-      "yellowCard": "Avertissement",
-      "excluTempo": "2 minutes",
-      "redCard": "Exclusion"
-    },
-    "teamLabels": {
-      "listCollect": "Evénements concernés"
-    },
-    "eventLabels": {
-      "listPlayers": "Liste joueurs",
-      "goalkeeper": "Gardien",
-      "player": "Joueur",
-      "position": "Poste",
-      "efficiency": "Efficatité",
-      "shoot": "But/Tir",
-      "efficiencyGoal": "% Arrêt",
-      "stop": "Arrêt/Tir",
-      "attack": "Attaque (+/-)",
-      "defense": "Defense (+/-)",
-      "yellowCard": "CJ",
-      "exclusion": "2'",
-      "redCard": "CR"
-    },
-    "label": {
-      "indicator" : "Indicateur",
-      "interceptionKo": "Interception ratée",
-      "duelLoose": "Duel perdu",
-      "badPosition": "Mauvais placement",
-      "neutralization": "Neutralisation",
-      "forceDef": "Force",
-      "contre": "Contre",
-      "interceptionOk": "Interception réussie",
-      "forceAtt": "Force",
-      "marcher": "Marcher",
-      "doubleDribble": "Double dribble",
-      "looseball": "Perte de balle",
-      "foot": "Pied",
-      "zone": "Zone",
-      "counterAttack": "Contre attaque",
-      "shift": "Décallage",
-      "duelWon": "Duel gagné",
-      "passDec": "Passe décisive",
-      "yellowCard": "Carton jaune",
-      "redCard": "Carton rouge",
-      "playtime": "Temps de jeu",
-      "substitue": "Remplaçant",
-      "holder": "Titulaire",
-      "injured": "Blessé",
-      "eventNotePerson": "Note",
-      "defenseSysUs": "Système de jeu",
-      "defenseSystemThem": "Système de jeu",
-      "timeAttack": "Temps en attaque",
-      "timeDefense": "Temps en défense",
-      "timeoutUs": "Temps mort",
-      "timeoutThem": "Temps mort",
-      "wound": "Blessure",
-      "passOk": "Passe",
-      "passOkStat": "Nb de passes",
-      "gameSystem": "Système de jeu",
-      "stopGKAtt": "Arrêt gardien",
-      "stopGKDef": "Arrêt gardien",
-      "positionType": "Poste",
-      "penaltyObtained": "Penalty",
-      "penaltyConceded": "Penalty",
-      "originShootAtt": "Origine de tir",
-      "originShootDef": "Origine de tir",
-      "shootAtt": "Tir",
-      "shootDef": "Tir adverse",
-      "goalScored": "But marqué",
-      "goalconceded": "But encaissé",
-      "stopOk": "Tir arreté",
-      "impactShootAtt": "Impact de tir",
-      "impactShootDef": "Impact de tir",
-      "pole": "Poteau",
-      "outside": "Sortie",
-      "exclTmpObtained": "2 minutes",
-      "exclusionTempoObtained": "2 minutes",
-      "playTime": "Temps de jeu"
+    "stats": {
+        "dashboard" : {
+            "widgetTopScored" : {
+                "title" : "Top buteurs"
+            },
+            "widgetTopUsed" : {
+                "title" : "Les + utilisés"
+            }
+        },
+        "buttons" : {
+          "timeline" : "Détail"
+        },
+        "positionType": {
+          "libelle": "Poste",
+          "value": {
+            "midfielder": "Milieu",
+            "defender": "Défenseur",
+            "forward": "Attaquant",
+            "goalkeeper": "Gardien",
+            "pivot": "Pivot",
+            "center-backcourt": "Demi-centre",
+            "right-backcourt": "Arrière Droit",
+            "left-backcourt": "Arrière Gauche",
+            "right-wingman": "Ailier Droit",
+            "left-wingman": "Ailier Gauche"
+          }
+        },
+        "efficiency": {
+          "efficiency": "Efficacité au tir",
+          "efficiencyTotal": "Globale",
+          "efficiency9m": "9 mètres",
+          "efficiency6m": "6 mètres",
+          "efficiency7m": "7 mètres"
+        },
+        "actionTab": {
+          "title": "Faits de jeu",
+          "actions": "Actions",
+          "positive": "positives",
+          "negative": "négatives",
+          "attack": "Actions offensives",
+          "defense": "Actions défensives"
+        },
+        "resumeTab": {
+          "shoot": "Tirs",
+          "goal": "Buts",
+          "goalScored": "Buts marqués",
+          "goalConceded": "Buts encaissés",
+          "goalLabel": "Nombre de Buts",
+          "goalAvgFull": "Moyenne/match",
+          "goalAvgLight": "Moyenne",
+          "frequence": "Fréquence",
+          "frequence2": "1 but toutes les",
+          "minute": "minutes",
+          "usePlayer": "Utilisation",
+          "gamePlayed": "Matchs joués",
+          "holder": "Titularisations",
+          "playTime": "Temps de jeu moyen",
+          "sanctions": "Sanctions",
+          "noData": "Aucune donnée collectée"
+        },
+        "labelTab": {
+          "shoot": "Tir",
+          "actions": "Actions de jeu",
+          "resume": "Résumé"
+        },
+        "typoGoal": "Typologie des buts",
+        "sanction": {
+          "yellowCard": "Avertissement",
+          "excluTempo": "2 minutes",
+          "redCard": "Exclusion"
+        },
+        "teamLabels": {
+          "listCollect": "Evénements concernés"
+        },
+        "eventLabels": {
+          "listPlayers": "Liste joueurs",
+          "goalkeeper": "Gardien",
+          "player": "Joueur",
+          "position": "Poste",
+          "efficiency": "Efficatité",
+          "shoot": "But/Tir",
+          "efficiencyGoal": "% Arrêt",
+          "stop": "Arrêt/Tir",
+          "attack": "Attaque (+/-)",
+          "defense": "Defense (+/-)",
+          "yellowCard": "CJ",
+          "exclusion": "2'",
+          "redCard": "CR"
+        },
+        "label": {
+          "indicator" : "Indicateur",
+          "interceptionKo": "Interception ratée",
+          "duelLoose": "Duel perdu",
+          "badPosition": "Mauvais placement",
+          "neutralization": "Neutralisation",
+          "forceDef": "Force",
+          "contre": "Contre",
+          "interceptionOk": "Interception réussie",
+          "forceAtt": "Force",
+          "marcher": "Marcher",
+          "doubleDribble": "Double dribble",
+          "looseball": "Perte de balle",
+          "foot": "Pied",
+          "zone": "Zone",
+          "counterAttack": "Contre attaque",
+          "shift": "Décallage",
+          "duelWon": "Duel gagné",
+          "passDec": "Passe décisive",
+          "yellowCard": "Carton jaune",
+          "redCard": "Carton rouge",
+          "playtime": "Temps de jeu",
+          "substitue": "Remplaçant",
+          "holder": "Titulaire",
+          "injured": "Blessé",
+          "eventNotePerson": "Note",
+          "defenseSysUs": "Système de jeu",
+          "defenseSystemThem": "Système de jeu",
+          "timeAttack": "Temps en attaque",
+          "timeDefense": "Temps en défense",
+          "timeoutUs": "Temps mort",
+          "timeoutThem": "Temps mort",
+          "wound": "Blessure",
+          "passOk": "Passe",
+          "passOkStat": "Nb de passes",
+          "gameSystem": "Système de jeu",
+          "stopGKAtt": "Arrêt gardien",
+          "stopGKDef": "Arrêt gardien",
+          "positionType": "Poste",
+          "penaltyObtained": "Penalty",
+          "penaltyConceded": "Penalty",
+          "originShootAtt": "Origine de tir",
+          "originShootDef": "Origine de tir",
+          "shootAtt": "Tir",
+          "shootDef": "Tir adverse",
+          "goalScored": "But marqué",
+          "goalconceded": "But encaissé",
+          "stopOk": "Tir arreté",
+          "impactShootAtt": "Impact de tir",
+          "impactShootDef": "Impact de tir",
+          "pole": "Poteau",
+          "outside": "Sortie",
+          "exclTmpObtained": "2 minutes",
+          "exclusionTempoObtained": "2 minutes",
+          "playTime": "Temps de jeu"
+        }
     }
-  }
 }
