--- a/src/app/components/i18n/home/en.json
+++ b/src/app/components/i18n/home/en.json
@@ -1,8 +1,17 @@
 {
-    "dashboard" : {
-        "event" : "Next event",
-        "stats" : "Statistics event",
-        "player" : "Statistics player",
-        "teams" : "Statistics team"
-    }
+  "dashboard": {
+    "event": "Next event",
+    "stats": "Statistics event",
+    "player": "Statistics player",
+    "teams": "Statistics team"
+  },
+  "widgetTopScored": {
+    "title": "Top buteurs"
+  },
+  "widgetTopUsed": {
+    "title": "Les + utilisés"
+  },
+  "widgetNotifications": {
+    "title": "Notifications"
+  }
 }
