--- a/src/app/components/i18n/home/fr.json
+++ b/src/app/components/i18n/home/fr.json
@@ -1,8 +1,17 @@
 {
-    "dashboard" : {
-        "event" : "Prochain évènement",
-        "stats" : "Statistiques évènement",
-        "player" : "Statistiques joueur",
-        "teams" : "Statistiques équipes"
-    }   
+  "dashboard": {
+    "event": "Prochain évènement",
+    "stats": "Statistiques évènement",
+    "player": "Statistiques joueur",
+    "teams": "Statistiques équipes",
+    "widgetTopScored": {
+      "title": "Top buteurs"
+    },
+    "widgetTopUsed": {
+      "title": "Les + utilisés"
+    },
+    "widgetNotifications": {
+      "title": "Notifications"
+    }
+  }
 }
