--- a/src/app/components/i18n/home/en.json
+++ b/src/app/components/i18n/home/en.json
@@ -13,5 +13,9 @@
   },
   "widgetNotifications": {
     "title": "Notifications"
+  },
+  "notifications" : {
+    "nodata" : "No news, good news!",
+    "more" : "See more"
   }
 }
