gestion du dernier onglet visité

--- a/src/app/components/i18n/effective/fr.json
+++ b/src/app/components/i18n/effective/fr.json
@@ -116,7 +116,7 @@
     "PositionType": "La poste du joueur est obligatoire"
   },
   "mainTeam": {
-    "title": "Equipe de l'effectif "
+    "title": "Equipes de l'effectif "
   },
     "tabTeam": {
       "dashboard": "Tableau de bord",
