--- a/src/app/components/i18n/menu/fr.json
+++ b/src/app/components/i18n/menu/fr.json
@@ -25,7 +25,8 @@
     "disconnect": "Déconnexion",
     "administration": "Administration",
     "signup": "S'inscrire",
-    "param": "Paramétrage"
+    "param": "Paramétrage",
+    "pricing" : "Tarifs"
   },
   "content": {
     "login": {
