--- a/src/app/components/i18n/profile/fr.json
+++ b/src/app/components/i18n/profile/fr.json
@@ -1,64 +1,64 @@
 {
-    "profile": {
-        "tabs" : {  
-            "stats": "Mes statistiques",
-            "profil": "Mon profil",
-            "password": "Mot de passe",
-            "billing": "Abonnement",
-            "sharing": "Invitations",
-            "notification": "Notifications",
-            "settings": "Paramétrage"
-        },
-        "label": {
-            "name": "Nom",
-            "forname": "Prénom",
-            "nick": "Login",
-            "address": "Adresse",
-            "zipcode": "Code postal",
-            "city": "Ville",
-            "email": "E-mail",
-            "birthdate": "Date de naissance",
-            "passwd1": "Mot de passe",
-            "passwd2": "Confirmation mot de passe",
-            "avatar": "Votre photo de profile",
-            "mandatory": "Les champs en rouge sont obligatoires",
-            "clubadmin": "Administrateur du club",
-            "billingdate": "Date de paiement",
-            "billingnumber": "Numéro de facture",
-            "product": "Produit",
-            "price": "Prix",
-            "activity": "Activité",
-            "avatar":"Déposer la photo ici"
-        },
-        "ph": {
-            "name": "Saisissez votre nom",
-            "forname": "Saisissez votre prénom",
-            "nick": "Choisissez un pseudonyme",
-            "address": "Saisissez votre adresse",
-            "zipcode": "Saisissez votre code postal",
-            "city": "Saisissez votre ville",
-            "email": "Saisissez votre adresse e-mail",
-            "birthdate": "Saisissez votre date de naissance",
-            "passwd1": "Saisissez le si vous souhaitez le modifier"
-        },
-        "message": {
-            "passwd": {
-                "strength": "Robustesse du mot de passe",
-                "different": "Les mots de passe ne correspondent pas",
-                "ok": "Mot de passe OK"
-            },
-            "email": {
-                "ok": "Email vérifié",
-                "ko": "Mauvaise adresse email",
-                "required": "Email obligatoire",
-                "exists": "Cette adresse email existe déjà"
-            },
-            "userLogin": {
-                "required": "Login obligatoire"  
-            },
-            "updPasswd" : {
-                "success" : "Votre mot de passe est mis à jour"
-            }
-        }
+  "profile": {
+    "tabs": {
+      "stats": "Mes statistiques",
+      "profil": "Mon profil",
+      "password": "Mot de passe",
+      "billing": "Abonnement",
+      "sharing": "Invitations",
+      "notification": "Notifications",
+      "settings": "Paramétrage"
+    },
+    "label": {
+      "name": "Nom",
+      "forname": "Prénom",
+      "nick": "Login",
+      "address": "Adresse",
+      "zipcode": "Code postal",
+      "city": "Ville",
+      "email": "E-mail",
+      "birthdate": "Date de naissance",
+      "passwd1": "Mot de passe",
+      "passwd2": "Confirmation mot de passe",
+      "mandatory": "Les champs en rouge sont obligatoires",
+      "clubadmin": "Administrateur du club",
+      "billingdate": "Date de paiement",
+      "billingnumber": "Numéro de facture",
+      "product": "Produit",
+      "price": "Prix",
+      "activity": "Activité",
+      "avatar": "Déposer la photo ici",
+      "pay": "Souscrire"
+    },
+    "ph": {
+      "name": "Saisissez votre nom",
+      "forname": "Saisissez votre prénom",
+      "nick": "Choisissez un pseudonyme",
+      "address": "Saisissez votre adresse",
+      "zipcode": "Saisissez votre code postal",
+      "city": "Saisissez votre ville",
+      "email": "Saisissez votre adresse e-mail",
+      "birthdate": "Saisissez votre date de naissance",
+      "passwd1": "Saisissez le si vous souhaitez le modifier"
+    },
+    "message": {
+      "passwd": {
+        "strength": "Robustesse du mot de passe",
+        "different": "Les mots de passe ne correspondent pas",
+        "ok": "Mot de passe OK"
+      },
+      "email": {
+        "ok": "Email vérifié",
+        "ko": "Mauvaise adresse email",
+        "required": "Email obligatoire",
+        "exists": "Cette adresse email existe déjà"
+      },
+      "userLogin": {
+        "required": "Login obligatoire"
+      },
+      "updPasswd": {
+        "success": "Votre mot de passe est mis à jour"
+      }
     }
+  }
 }
