--- a/src/app/components/i18n/profile/en.json
+++ b/src/app/components/i18n/profile/en.json
@@ -1,65 +1,64 @@
 {
-    "profile": {
-        "tabs" : {  
-            "stats": "Stats",
-            "profil": "Profil",
-            "password": "Password",
-            "billing": "Billing",
-            "sharing": "Invitation",
-            "notification": "Notifications",
-            "settings": "Settings"
-        },
-        "label": {
-            "name": "Name",
-            "forname": "First name",
-            "nick": "Username",
-            "address": "Address",
-            "zipcode": "Postal code",
-            "city": "City",
-            "email": "E-mail",
-            "birthdate": "Birthdate",
-            "passwd1": "Password",
-            "passwd2": "Repeat password",
-            "avatar": "Your profile photo",
-            "mandatory": "Fields in red are required",
-            "clubadmin": "Club Administrator",
-            "billingdate": "Payment date",
-            "billingnumber": "Invoice number",
-            "product": "Product",
-            "price": "Price",
-            "activity": "Activity",
-            "avatar":"Drag and drop avatar here"
-        },
-        "ph": {
-            "name": "Enter your name",
-            "forname": "Enter your first name",
-            "nick": "Choose a username",
-            "address": "Enter your address",
-            "zipcode": "Enter your postal code",
-            "city": "Enter your city",
-            "email": "Enter your email address",
-            "birthdate": "Enter your date of birth",
-            "passwd1": "Enter if you want to change the password"
-        },
-        "message": {
-            "passwd": {
-                "strength": "Password strength",
-                "different": "Passwords do not match",
-                "ok": "Password OK"
-            },
-            "email": {
-                "ok": "Verified email",
-                "ko": "Wrong email address",
-                "required": "Email required",
-                "exists": "This e-mail address already exists"
-            },
-            "userLogin": {
-                "required": "Login required"  
-            },
-            "updPasswd" : {
-                "success" : "Pssword update success"
-            }
-            
-        }
+  "profile": {
+    "tabs": {
+      "stats": "Stats",
+      "profil": "Profil",
+      "password": "Password",
+      "billing": "Billing",
+      "sharing": "Invitation",
+      "notification": "Notifications",
+      "settings": "Settings"
+    },
+    "label": {
+      "name": "Name",
+      "forname": "First name",
+      "nick": "Username",
+      "address": "Address",
+      "zipcode": "Postal code",
+      "city": "City",
+      "email": "E-mail",
+      "birthdate": "Birthdate",
+      "passwd1": "Password",
+      "passwd2": "Repeat password",
+      "mandatory": "Fields in red are required",
+      "clubadmin": "Club Administrator",
+      "billingdate": "Payment date",
+      "billingnumber": "Invoice number",
+      "product": "Product",
+      "price": "Price",
+      "activity": "Activity",
+      "avatar": "Drag and drop avatar here",
+      "pay": "Subscribe"
+    },
+    "ph": {
+      "name": "Enter your name",
+      "forname": "Enter your first name",
+      "nick": "Choose a username",
+      "address": "Enter your address",
+      "zipcode": "Enter your postal code",
+      "city": "Enter your city",
+      "email": "Enter your email address",
+      "birthdate": "Enter your date of birth",
+      "passwd1": "Enter if you want to change the password"
+    },
+    "message": {
+      "passwd": {
+        "strength": "Password strength",
+        "different": "Passwords do not match",
+        "ok": "Password OK"
+      },
+      "email": {
+        "ok": "Verified email",
+        "ko": "Wrong email address",
+        "required": "Email required",
+        "exists": "This e-mail address already exists"
+      },
+      "userLogin": {
+        "required": "Login required"
+      },
+      "updPasswd": {
+        "success": "Pssword update success"
+      }
     }
+  }
 }
