--- a/src/app/components/i18n/menu/fr.json
+++ b/src/app/components/i18n/menu/fr.json
@@ -17,6 +17,10 @@
       "mark-as-unread": "Marquer comme non lu",
       "delete": "Supprimer",
       "new": "Nouveaux"
+    },
+    "trial": {
+      "title": "Vous êtes en période d'essai",
+      "content": "Vous pouvez vous abonner à tout moment en <a href=\"/#/private/profile/pay/0\" >cliquant ici</a>. Cette période expire dans <b>{{count}}</b> jour(s)."
     }
   },
   "navbar": {
@@ -26,7 +30,7 @@
     "administration": "Administration",
     "signup": "S'inscrire",
     "param": "Paramétrage",
-    "pricing" : "Tarifs"
+    "pricing": "Tarifs"
   },
   "content": {
     "login": {
