--- a/src/app/components/i18n/public/fr.json
+++ b/src/app/components/i18n/public/fr.json
@@ -69,5 +69,49 @@
     "button": {
       "send": "Envoyer"
     }
+  },
+  "pricing": {
+    "title": "Guide des offres",
+    "desc": "Qaobee s'adresse aux entraîneurs et aux clubs de handball.",
+    "subscribe-btn": "Souscrire",
+    "soon-btn": "Prochainement",
+    "team-subscribe": "Vous êtes un club et vous souhaitez souscrire à Qaobee pour vos entraîneurs, <a href=\"mailto:contact@qaobee.com\">contactez nous</a>",
+    "trial": {
+      "title": "Qaobee est gratuit pendant un mois, alors profitez-en dès à présent",
+      "btn": "Essayer gratuitement"
+    },
+    "offers": {
+      "standard": {
+        "title": "Standard",
+        "price": "8",
+        "period": "par mois",
+        "desc": "L'espace de travail dont vous avez besoin pour vous entraîner en toute simplicité.",
+        "detail": {
+          "title": "Standard comprends",
+          "sub-title": "Toutes ces fonctionnalités :",
+          "line1": "Tableau de bord personnalisé",
+          "line2": "Gestion de l'effectif",
+          "line3": "Calendrier sportif",
+          "line4": "Entraînement",
+          "line5": "Collecte de données en temps réel",
+          "line6": "Rapports statistiques"
+        }
+      },
+      "team": {
+        "title": "Team",
+        "price": "12",
+        "period": "par utilisateur / par mois",
+        "desc": "Pour les entraîneurs qui travaillent en équipe.",
+        "detail": {
+          "title": "Team comprends",
+          "sub-title": "Tout <b>Standard</b>, et :",
+          "line1": "Partage de son espace de travail avec 5 entraîneurs",
+          "line2": "Gestion de l'effectif collaboratif",
+          "line3": "Agenda collaboratif",
+          "line4": "Entraînement collaboratif",
+          "line5": "Support"
+        }
+      }
+    }
   }
 }
