--- a/src/app/components/i18n/profile/en.json
+++ b/src/app/components/i18n/profile/en.json
@@ -61,6 +61,11 @@
       "updPasswd": {
         "success": "Pssword update success"
       }
+    },
+    "popup": {
+      "update": {
+        "success": "Profile updated"
+      }
     }
   }
 }
