--- a/src/app/components/i18n/menu/en.json
+++ b/src/app/components/i18n/menu/en.json
@@ -19,7 +19,7 @@
       "new": "New"
     },
     "trial": {
-      "title": "You are in trial period",
+      "title": "You are in trial period.",
       "content": "You can subscribe anytime by <a href=\"/#/private/profile/pay/0\" >clikcing here</a>. This period expires in <b>{{count}}</b> day(s)."
     }
   },
