--- a/src/app/components/i18n/home/en.json
+++ b/src/app/components/i18n/home/en.json
@@ -15,6 +15,9 @@
         },
         "widgetEfficiency": {
             "title": "Shoot 's efficiency"
+        },
+        "actionTitle": {
+            "defaultScreen": "Default dashboard"
         }
     },
     "notifications" : {
