--- a/src/app/components/i18n/home/fr.json
+++ b/src/app/components/i18n/home/fr.json
@@ -15,6 +15,9 @@
         },
         "widgetEfficiency": {
             "title": "Efficacité au tir"
+        },
+        "actionTitle": {
+            "defaultScreen": "Retour à l'écran par défaut"
         }
     },
     "notifications" : {
