#116244536894146 : [BUG] - Profil user : libellés des cellules de renseignement du nveau pwd

--- a/src/app/components/i18n/profile/en.json
+++ b/src/app/components/i18n/profile/en.json
@@ -19,8 +19,8 @@
       "city": "City",
       "email": "E-mail",
       "birthdate": "Birthdate",
-      "passwd1": "Password",
-      "passwd2": "Repeat password",
+      "passwd1": "New password",
+      "passwd2": "Repeat new password",
       "mandatory": "Fields in red are required",
       "clubadmin": "Club Administrator",
       "billingdate": "Payment date",
