--- a/src/app/components/i18n/profile/fr.json
+++ b/src/app/components/i18n/profile/fr.json
@@ -19,8 +19,8 @@
       "city": "Ville",
       "email": "E-mail",
       "birthdate": "Date de naissance",
-      "passwd1": "Mot de passe",
-      "passwd2": "Confirmation mot de passe",
+      "passwd1": "Nouveau mot de passe",
+      "passwd2": "Confirmation nouveau mot de passe",
       "mandatory": "Les champs en rouge sont obligatoires",
       "clubadmin": "Administrateur du club",
       "billingdate": "Date de paiement",
